Fix more scrolling bugs, remove rogue scrollbar

--- a/src/pages/solves-bar-component/solves-bar-component.scss
+++ b/src/pages/solves-bar-component/solves-bar-component.scss
@@ -18,16 +18,14 @@ solves-bar {
   padding: 4px;
 }
 
-.solves {
-  height: calc(100% - 1.2em - 8px);
-}
-
 .solves-sheet {
   box-shadow: 0px -4px 22px -8px rgba(0, 0, 0, 0.75);
   background: white;
-  height: fit-content;
-  min-height: 100%;
-  width: 100%;
+  height: 400%;
+}
+
+.solves-scroll {
+  height: calc(25% - 1.2em - 8px);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
