--- a/src/pages/timer-page/timer-page.scss
+++ b/src/pages/timer-page/timer-page.scss
@@ -2,6 +2,10 @@ page-timer {
 
 }
 
+.scroll-content {
+  overflow-y: hidden;
+}
+
 .fixed-content-inner {
   width: 100%;
   height: 100%;
